force-app/main/default/objects/EmailTemplateImages__c/EmailTemplateImages__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stocker les liens utilisés dans les emails templates harmonica</description>
    <label>EmailTemplateImages</label>
</CustomObject>