force-app/main/default/objects/EmailTemplateImages__c/fields/Image_1__c.field-meta.xml
<CustomField>
    <fullName>Image_1__c</fullName>
    <description>Id document de l&apos;image 1</description>
    <label>Image 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>