force-app/main/default/objects/EmailTemplateImages__c/fields/Image_2__c.field-meta.xml
<CustomField>
    <fullName>Image_2__c</fullName>
    <description>Id document de l&apos;image 2</description>
    <label>Image 2</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>