force-app/main/default/objects/EmailTemplateImages__c/fields/Image_3__c.field-meta.xml
<CustomField>
    <fullName>Image_3__c</fullName>
    <description>Id document de l&apos;image 3</description>
    <label>Image 3</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>